# testing

./: .env.example  .gitignore  CNAME  README.md  index.html  index.md  intent_classification.py  palindromes.py  pyproject.toml  shekels.py  slides.html  slides.md
