[project]
name = "testing-masterclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "logfire>=4.4.0",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pydantic-ai>=1.0.1",
    "pydantic-evals>=1.0.1",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
